# Fermat3D_OpenMesh

./: .gitignore  CMakeLists.txt  HeatFermat3D.cpp  README.md  SpiralDt.cpp  SpiralDt.h  Spirals.cpp  Spirals.h
cmake/: FindLIBIGL.cmake
data/: 131.off
